--- a/utils/css/style.css
+++ b/utils/css/style.css
@@ -70,6 +70,12 @@ img {
   max-width: 100%;
 }
 
+iframe {
+  max-width: 100%;
+  width: 100%;
+  display: block;
+}
+
 .container {
   max-width: 1400px;
   margin: 0 auto;
@@ -535,12 +541,12 @@ img {
 .about__skill {
   width: 100%;
   display: flex;
-  background-color: var(--color-claro);
+  background-color: var(--color-amarillo);
   justify-content: space-around;
 }
 .about__skill--icon {
-  font-size: 1.8rem;
-  color: var(--color-naranja);
+  font-size: 2.2rem;
+  color: var(--color-oscuro);
   margin-right: 15px;
 }
 .about__skills {
@@ -549,7 +555,8 @@ img {
   margin: 20px 0;
 }
 .about__h4 {
-  font-size: 1.5rem;
+  font-size: 2rem;
+  color: var(--color-claro);
 }
 
 @media (max-width: 1080px) {
@@ -708,14 +715,14 @@ img {
 .footer .titulos {
   text-align: center;
   padding-bottom: 10rem;
-  color: var(--color-oscuro);
+  color: #fff;
 }
 .footer__h4 {
   font-weight: bold;
   font-size: 2.5rem;
   text-align: center;
   padding-bottom: 1.6rem;
-  color: var(--color-oscuro);
+  color: #fff;
 }
 .footer__contenedor {
   display: flex;
@@ -783,6 +790,7 @@ img {
 .footer__copy {
   text-align: center;
   font-size: 1.3rem;
+  color: #fff;
 }
 
 @media (max-width: 968px) {
@@ -793,6 +801,23 @@ img {
     width: 100%;
     margin: 2rem;
   }
+}
+.myblog .container {
+  padding-bottom: 150px;
+}
+.myblog__p {
+  text-align: center;
+  padding-bottom: 2rem;
+}
+.myblog__contenedor {
+  max-width: 1400px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  justify-content: center;
+  gap: 10px;
+}
+.myblog__box {
+  padding: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
