--- a/utils/scss/globales/_base.scss
+++ b/utils/scss/globales/_base.scss
@@ -65,6 +65,11 @@ p{
 img{
     max-width:100%;
 }
+iframe{
+    max-width: 100%;
+    width: 100%;
+    display: block;
+}
 .container{
     max-width: 1400px;
     margin: 0 auto;
