--- a/utils/scss/main/_about.scss
+++ b/utils/scss/main/_about.scss
@@ -37,12 +37,12 @@
     &__skill{
         width: 100%;
         display: flex;
-        background-color: var(--color-claro);
+        background-color: var(--color-amarillo);
         justify-content: space-around;
 
         &--icon{
-            font-size: 1.8rem;
-            color: var(--color-naranja);
+            font-size: 2.2rem;
+            color: var(--color-oscuro);
             margin-right: 15px;
         }
     }
@@ -52,7 +52,8 @@
         margin: 20px 0;
     }
     &__h4{
-        font-size: 1.5rem;
+        font-size: 2rem;
+        color: var(--color-claro);
 
     }
 
