--- a/utils/scss/main/_myblog.scss
+++ b/utils/scss/main/_myblog.scss
@@ -7,6 +7,7 @@
     &__p{
         text-align: center;
         padding-bottom: 2rem;
+        margin: 2rem;
     }
     &__contenedor{
         max-width: 1400px;
