--- a/utils/css/style.css
+++ b/utils/css/style.css
@@ -55,6 +55,12 @@ a:active {
 
 a {
   font-size: 2rem;
+  color: #fff;
+}
+@media (max-width: 43.7485em) {
+  a {
+    font-size: 1.6rem;
+  }
 }
 
 p {
@@ -103,6 +109,7 @@ iframe {
 :root {
   --color-oscuro: hsl(247, 42%, 20%);
   --color-claro: hsl(224, 57%, 38%);
+  --color-azul: hsl(224, 62%, 59%);
   --color-amarillo: hsl(39, 90%, 54%);
   --color-naranja: hsl(21, 83%, 54%);
   --color-gris: hsl(0, 0%, 62%);
@@ -808,6 +815,7 @@ iframe {
 .myblog__p {
   text-align: center;
   padding-bottom: 2rem;
+  margin: 2rem;
 }
 .myblog__contenedor {
   max-width: 1400px;
@@ -817,6 +825,43 @@ iframe {
   gap: 10px;
 }
 .myblog__box {
+  padding: 1rem;
+}
+
+.miblog__contenedor {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.miblog__p {
+  text-align: center;
+  padding-bottom: 2rem;
+  margin: 2rem;
+}
+.miblog__bga {
+  background-color: var(--color-amarillo);
+  height: 6rem;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+}
+.miblog__bga h3 {
+  color: var(--color-claro);
+}
+.miblog__bgb {
+  background-color: var(--color-claro);
+  height: 10rem;
+  display: flex;
+  align-items: center;
+  margin: 0.5rem;
+  padding: 0.5rem;
+}
+.miblog__bgb:hover {
+  background-color: var(--color-azul);
+}
+.miblog__bgb p {
+  color: var(--color-amarillo);
   padding: 1rem;
 }
 
