--- a/utils/scss/globales/_variables.scss
+++ b/utils/scss/globales/_variables.scss
@@ -1,6 +1,7 @@
 :root{
     --color-oscuro: hsl(247, 42%, 20%);
     --color-claro: hsl(224, 57%, 38%);
+    --color-azul: hsl(224, 62%, 59%);
     --color-amarillo: hsl(39, 90%, 54%);
     --color-naranja: hsl(21, 83%, 54%);
     --color-gris: hsl(0, 0%, 62%);
