--- a/utils/css/style.css
+++ b/utils/css/style.css
@@ -153,13 +153,13 @@ iframe {
   top: 0;
   position: sticky;
   display: flex;
-  z-index: 99;
+  z-index: 100;
 }
 .header__nav {
   display: flex;
   justify-content: space-between;
   height: 10rem;
-  z-index: 1;
+  z-index: 100;
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
@@ -170,6 +170,7 @@ iframe {
   align-items: center;
   list-style: none;
   text-align: center;
+  z-index: 90;
 }
 .header__item {
   height: 3.25rem;
@@ -182,7 +183,7 @@ iframe {
   text-decoration: none;
   height: 100%;
   font-size: 1.7rem;
-  padding: 0 15px;
+  padding: 0 1.5rem;
 }
 .header__links:hover {
   color: #fff;
@@ -194,7 +195,7 @@ iframe {
   flex-direction: row;
 }
 .header__social .header__social--icon {
-  font-size: 2rem;
+  font-size: 2.5rem;
   color: var(--color-claro);
   margin: 15px;
 }
@@ -202,7 +203,7 @@ iframe {
   color: #fff;
 }
 .header .header__links--logo {
-  display: none;
+  display: block;
 }
 .header__logo {
   display: flex;
@@ -210,12 +211,15 @@ iframe {
   cursor: pointer;
 }
 
-@media (max-width: 968px) {
+@media (max-width: 768px) {
+  .header {
+    height: 7rem;
+  }
   .header__nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 10rem;
+    height: 7rem;
     z-index: 1;
     width: 100%;
     max-width: 1400px;
@@ -230,20 +234,19 @@ iframe {
     width: 60%;
     position: absolute;
     right: 100%;
-    top: 0;
-    height: 90vh;
+    top: 7rem;
     opacity: 1;
-    transition: all 0.7s ease;
-    z-index: 100;
+    height: 50vh;
+    transition: all 300ms ease;
+    z-index: -1;
   }
   .header__menu.active {
     background-color: var(--color-claro);
     right: 40%;
     opacity: 1;
-    transition: all 0.7s ease;
+    height: 50vh;
+    transition: all 300ms ease;
     z-index: 100;
-    height: 90vh;
-    font-size: 1.6rem;
   }
   .header__logo {
     margin-left: 35px;
@@ -255,7 +258,6 @@ iframe {
     text-align: center;
     width: 100%;
     color: #fff;
-    transition: all 0.5s ease;
     cursor: pointer;
   }
   .header__social {
@@ -263,8 +265,8 @@ iframe {
     flex-direction: row;
   }
   .header__social .header__social--icon {
-    font-size: 1.5rem;
-    color: #fff;
+    font-size: 2rem;
+    color: var(--color-amarillo);
     margin: 15px;
   }
   .header__social .header__social--icon:hover {
@@ -283,8 +285,9 @@ iframe {
     background-color: #fff;
   }
   .header #mobile-menu {
+    cursor: pointer;
     position: absolute;
-    top: 30%;
+    top: 25%;
     right: 10%;
     transform: translate(-6%, 20%);
   }
