--- a/utils/scss/main/_portafolio.scss
+++ b/utils/scss/main/_portafolio.scss
@@ -87,7 +87,8 @@
         transition: all 400ms;
     }
     &__box:nth-child(1){
-        background-image: url('../img/Portafolio__07.jpg');
+        background-image: url('../img/portafolio01.png');
+        background-color: var(--color-amarillo);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -111,13 +112,15 @@
         background-position: center;
     }
     &__box:nth-child(5){
-        background-image: url('../img/Portafolio__07.jpg');
+        background-image: url('../img/portafolio05.png');
+        background-color: var(--color-amarillo);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
     }
     &__box:nth-child(6){
-        background-image: url('../img/Portafolio__07.jpg');
+        background-image: url('../img/portafolio06.png');
+        background-color: var(--color-amarillo);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
