--- a/utils/css/style.css
+++ b/utils/css/style.css
@@ -347,15 +347,6 @@ iframe {
   display: flex;
   justify-content: center;
 }
-.hero__img {
-  width: 100%;
-}
-.hero__img-portada {
-  object-fit: cover;
-  bottom: 100px;
-  width: 100%;
-  z-index: -1;
-}
 
 @media (max-width: 720px) {
   .hero__container {
@@ -501,9 +492,10 @@ iframe {
   background-position: center;
 }
 .portafolio__box:nth-child(4) {
-  background-image: url("../img/Portafolio__07.jpg");
+  background-image: url("../img/portafolio04.png");
+  background-color: var(--color-amarillo);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
 }
 .portafolio__box:nth-child(5) {
