--- a/utils/scss/main/_portafolio.scss
+++ b/utils/scss/main/_portafolio.scss
@@ -104,11 +104,13 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+        
     }
     &__box:nth-child(4){
-        background-image: url('../img/Portafolio__07.jpg');
+        background-image: url('../img/portafolio04.png');
+        background-color: var(--color-amarillo);
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
         background-position: center;
     }
     &__box:nth-child(5){
