--- a/utils/scss/main/_portafolio.scss
+++ b/utils/scss/main/_portafolio.scss
@@ -98,7 +98,7 @@
         background-position: center;
     }
     &__box:nth-child(3){
-        background-image: url('../img/Portafolio__07.jpg');
+        background-image: url('../img/Portafolio03.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
